# salt-bevy

./: .gitignore  README.md  Vagrantfile  bevy00.yaml  cache_present_bevy_keys.sh  clone-training-repo.bat  clone-training-repo.sh  clone_training_material.cmd  install_sudo.bat  join-bevy.bat  join-bevy.sh  pyproject.toml  remove-second-minion.sh  requirements.txt  test.map  unprotect_windows_salt.bat  vgr  vgr.bat  windows_install_python.ps1
bevy_srv/pillar/: azure_cloud_settings.sls  manual_bevy_settings.sls  pywin32_settings.sls  top.sls
bevy_srv/salt/: UTC_time.sls  add_bevymaster_to_hosts.sls  administrator_user.sls  cleanup_vagrant.sls  common.sls  configure_bevy_member.sls  ensure_user_privs.sls  interactive_user.sls  nfs_server.sls  remove_second_minion.sls  restart_the_minion.sls  run_command_later.py  sdb.sls  tcp_keepalive.sls  test_not_a_workstation.sls  top.sls
bevy_srv/salt/bevy_master/: define_interactive_user.sls  init.sls  local_windows_repository.sls  salt-api.sls  setup_azure_cloud.sls  setup_github_windows_repository.sls  start_vagrant_bevymaster.sls
bevy_srv/salt/container/: docker.sls  k8s.sls  microk8s.sls
bevy_srv/salt/db_server/: mssql.sls
bevy_srv/salt/db_servers/: odbc_driver.sls
bevy_srv/salt/developer/: golang.sls  install_mono.sls  install_salt_source.sls  pywin32_build_machine.sls
bevy_srv/salt/dnsmasq/: pxe.sls  pxe_auto_install.sls
bevy_srv/salt/dotnet/: install.sls  install_dotnet_core.sls
bevy_srv/salt/files/: sdb.conf
bevy_srv/salt/macos/: install_homebrew.sls
configure_machine/: README.md  bootstrap_bevy_member_here.py  bootstrap_salt.bat  install_windows_python.bat  install_windows_sudo.bat  macos_install_P3_and_salt.sh  macos_install_P3_salt.sh  macos_install_brew.sh  macos_install_vagrant_host.sh  macos_unprotect_dirs.sh  masterless_minion.conf  pwd_hash.py  sudo.py  windows_install_salt.bat
configure_machine/dummy_pillar/: common.sls  top.sls
configure_machine/helpers/: argv_quote.py  pause_after.bat  provisioner.py  pwd_hash.py  salt_call_local.py  sudo.py  sudo_cd.bat  sudo_pause.bat  test_helpers.py  vgr  vgr.bat
(+56 files in other folders)
